// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobProfile component component matches snapshot with full profile 1`] = `
<styled.section>
  <styled.div>
    <styled.h3>
      <styled.a
        className="company-link"
        href="somewhere_over_the_rainbow"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
      </styled.a>
    </styled.h3>
    <styled.h4>
      <span>
        title
      </span>
      <styled.span>
        startDate
         
        -&gt;
         
        endDate
      </styled.span>
    </styled.h4>
    <styled.p>
      desc
    </styled.p>
  </styled.div>
  <styled.div />
</styled.section>
`;

exports[`JobProfile component component matches snapshot with no endDate 1`] = `
<styled.section>
  <styled.div>
    <styled.h3>
      <styled.a
        className="company-link"
        href="somewhere_over_the_rainbow"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
      </styled.a>
    </styled.h3>
    <styled.h4>
      <span>
        title
      </span>
      <styled.span>
        startDate
         
        -&gt;
         
      </styled.span>
    </styled.h4>
    <styled.p>
      desc
    </styled.p>
  </styled.div>
  <styled.div />
</styled.section>
`;
